--- a/Folleto/styles.css
+++ b/Folleto/styles.css
@@ -49,8 +49,9 @@ section h2 {
 
 .product img {
     width: 100%;
-    height: 200px; /* Fijamos la altura */
-    object-fit: cover; /* Esto garantiza que la imagen mantenga sus proporciones y se recorte si es necesario */
+    height: auto; /* Ajusta la altura automáticamente para mantener la proporción */
+    max-height: 200px; /* Limita la altura máxima de la imagen */
+    object-fit: cover; /* Asegura que la imagen mantenga sus proporciones y se recorte si es necesario */
     border-bottom: 1px solid #ddd;
 }
 
