--- a/Folleto/styles.css
+++ b/Folleto/styles.css
@@ -1,14 +1,14 @@
 /* Estilos generales */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Serif, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #ffffff;
 }
 
 header {
-    background: #333;
-    color: #fff;
+    background: #ffffff;
+    color: #000000;
     padding: 20px;
     text-align: center;
 }
