--- a/Folleto/styles.css
+++ b/Folleto/styles.css
@@ -1,3 +1,13 @@
+.instagram-link {
+    position: absolute;
+    right: 10px; /* Ajusta según sea necesario */
+    top: 10px; /* Ajusta según sea necesario */
+}
+
+.instagram-icon {
+    width: 30px; /* Tamaño del ícono */
+    height: auto;
+}
 
 body {
     font-family: Serif, sans-serif;
