--- a/Folleto/styles.css
+++ b/Folleto/styles.css
@@ -1,15 +1,19 @@
 .dropdown-content {
+    display: none; /* Ocultamos el menú por defecto */
     position: absolute; /* Permite que se superponga sobre otros elementos */
+    background-color: #f9f9f9; /* Color de fondo del recuadro */
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Sombra para dar efecto de elevación */
     z-index: 1; /* Asegura que el menú esté encima de otros elementos */
     border-radius: 5px; /* Esquinas redondeadas */
+    padding: 10px; /* Espaciado interno del recuadro */
 }
 
 .dropdown-content a {
     color: #333; /* Color del texto */
     padding: 12px 16px; /* Espaciado alrededor del texto */
     text-decoration: none; /* Sin subrayado */
-    display: flex; /* Cada enlace ocupa toda la fila */
+    display: inline-block; /* Enlaces uno al lado del otro */
+    margin-right: 10px; /* Espaciado entre enlaces */
 }
 
 .dropdown-content a:hover {
