--- a/Folleto/styles.css
+++ b/Folleto/styles.css
@@ -6,13 +6,13 @@
     z-index: 1; /* Asegura que el menú esté encima de otros elementos */
     border-radius: 5px; /* Esquinas redondeadas */
     padding: 10px; /* Espaciado interno del recuadro */
+    display: flex; /* Establece un contenedor flexible */
 }
 
 .dropdown-content a {
     color: #333; /* Color del texto */
     padding: 12px 16px; /* Espaciado alrededor del texto */
     text-decoration: none; /* Sin subrayado */
-    display: inline-block; /* Enlaces uno al lado del otro */
     margin-right: 10px; /* Espaciado entre enlaces */
 }
 
@@ -24,6 +24,7 @@
 .dropdown:hover .dropdown-content {
     display: block; /* Muestra el menú */
 }
+
 
 .instagram-link {
     position: absolute;
