--- a/Folleto/styles.css
+++ b/Folleto/styles.css
@@ -46,6 +46,33 @@ section h2 {
     text-align: center;
 }
 
+/* Estilo del dropdown */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    border-radius: 5px; /* Bordes redondeados */
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
 /* Cuadrícula de productos */
 .products-grid {
     display: flex;
