--- a/Folleto/styles.css
+++ b/Folleto/styles.css
@@ -30,7 +30,7 @@
     transform: translateY(-10px); /* Empieza un poco más arriba */
     transition: transform 0.3s ease, opacity 0.3s ease; /* Transición suave */
     top: 100%; /* Alinea el menú justo debajo del botón */
-    left: 0; /* Alinea el menú con el borde izquierdo del botón */
+    right: 0; /* Alinea el menú con el borde izquierdo del botón */
 }
 
 /* Estilo para cada enlace dentro del dropdown */
