--- a/Folleto/styles.css
+++ b/Folleto/styles.css
@@ -27,10 +27,10 @@
     border-radius: 5px; /* Bordes redondeados */
     overflow: hidden;
     opacity: 0; /* Oculto inicialmente */
-    transform: translateY(-5px); /* Empieza un poco más arriba */
+    transform: translateY(-20px); /* Empieza un poco más arriba */
     transition: transform 0.3s ease, opacity 0.3s ease; /* Transición suave */
     top: 100%; /* Alinea el menú justo debajo del botón */
-    right: 0; /* Alinea el menú con el borde izquierdo del botón */
+    right: 0; /* Alinea el menú con el borde derecho del botón */
 }
 
 /* Estilo para cada enlace dentro del dropdown */
